<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/header"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <ImageView
               android:layout_width="125dp"
               android:layout_height="75dp"
               android:id="@+id/fotoKamar"
               android:src="@drawable/image_slider_1"
               android:scaleType="centerCrop"
               android:layout_margin="8dp"
               android:contentDescription="@string/resto" />

           <LinearLayout
               android:layout_margin="8dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/nama_kamar"
                   android:id="@+id/namaKamar"
                   android:textSize="20sp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/harga_kamar"
                   android:textSize="18sp"
                   android:id="@+id/kapasitasKamar"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/harga_kamar"
                   android:textSize="18sp"
                   android:id="@+id/hargaKamar"/>

           </LinearLayout>

       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtDetail"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/detail"
                android:background="@color/putih_trans"
                android:textSize="20sp"
                android:textColor="@color/putih"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/txtOrder"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/order"
                android:background="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textColor="@color/putih"
                android:gravity="center"
            />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>